include_HEADERS=inc/nas_ndi_router_interface.h inc/nas_ndi_switch.h inc/nas_ndi_route.h \
                inc/nas_ndi_mirror.h inc/nas_ndi_acl.h inc/nas_ndi_port.h inc/nas_ndi_plat_stat.h \
                inc/nas_ndi_mac.h inc/hal_shell.h inc/nas_ndi_init.h inc/nas_ndi_common.h \
                inc/nas_ndi_qos.h inc/nas_ndi_sflow.h inc/nas_ndi_stg.h inc/nas_ndi_vlan.h \
                inc/nas_ndi_lag.h inc/nas_ndi_hash.h
