include_HEADERS=inc/hal_shell.h inc/nas_ndi_fc_stat.h  inc/nas_ndi_mac.h  inc/nas_ndi_qos.h \
                inc/nas_ndi_stg.h inc/nas_ndi_acl.h inc/nas_ndi_hash.h inc/nas_ndi_mirror.h \
                inc/nas_ndi_route.h inc/nas_ndi_switch.h inc/nas_ndi_common.h \
                inc/nas_ndi_init.h inc/nas_ndi_plat_stat.h inc/nas_ndi_router_interface.h \
                inc/nas_ndi_udf.h inc/nas_ndi_fc.h inc/nas_ndi_lag.h inc/nas_ndi_port.h \
                inc/nas_ndi_sflow.h inc/nas_ndi_vlan.h inc/nas_ndi_l2mc.h inc/nas_ndi_mcast.h \
                inc/nas_ndi_1d_bridge.h
