#
# Copyright (c) 2019 Dell Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# THIS CODE IS PROVIDED ON AN *AS IS* BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT
# LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS
# FOR A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
#
# See the Apache Version 2.0 License for specific language governing
# permissions and limitations under the License.
#

include_HEADERS=inc/hal_shell.h inc/nas_ndi_fc_stat.h  inc/nas_ndi_mac.h  inc/nas_ndi_qos.h \
                inc/nas_ndi_stg.h inc/nas_ndi_acl.h inc/nas_ndi_hash.h inc/nas_ndi_mirror.h \
                inc/nas_ndi_route.h inc/nas_ndi_switch.h inc/nas_ndi_common.h \
                inc/nas_ndi_init.h inc/nas_ndi_plat_stat.h inc/nas_ndi_router_interface.h \
                inc/nas_ndi_udf.h inc/nas_ndi_fc.h inc/nas_ndi_lag.h inc/nas_ndi_port.h \
                inc/nas_ndi_sflow.h inc/nas_ndi_vlan.h inc/nas_ndi_l2mc.h inc/nas_ndi_mcast.h \
		inc/nas_ndi_ipmc.h \
		inc/nas_ndi_trap.h \
                inc/nas_ndi_1d_bridge.h
