#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([opx-nas-ndi-api], [7.7.0+opx1], [ops-dev@lists.openswitch.net])
AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE([enable])
AC_CONFIG_SRCDIR([.])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
